Fix typo in heading for event booking form

--- a/html project/codes/form.html
+++ b/html project/codes/form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div>
-    <center><h1><mark>Book your Events and Shoots</mark></h1>
+    <center><h1><mark>Book your Events & Shoots</mark></h1>
     <h4>for booking |collabartion |promotions</h4></center>
     <hr boreder="1"></hr>
 
